--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -102,5 +102,35 @@
 \section{Logger setup schematic}\label{CLS}
 	 \includegraphics[scale=0.5]{csac_logger.pdf}
 
+\chapter{E-mails}
+\section{Correspondence with Mr. Davis}\label{davis_email}
+	\begin{Verbatim}[fontsize=\footnotesize ]
+
+Hi Aril,
+
+This would be fine, but you may want to take a look at the Astropy library
+and see if their time package would meet your needs. It's certain to be
+more robust and well tested. But if you'd like to use my module, please do.
+http://docs.astropy.org/en/stable/time/index.html
+
+Best,
+Matt Davis
+
+On Sun, Oct 23, 2016 at 2:25 PM Aril Schultzen <aschultzen@gmail.com> wrote:
+
+> Hi!
+>
+> I am currently writing my master thesis in compsci and I wanted to ask you
+> if it was OK if I used your library for converting dates to/from JD and MJD
+>   (https://gist.github.com/jiffyclub/1294443) in my implementation? It
+> will be used to convert time to MJD for a model and also for stamping logs.
+> Your work will of course be acknowledge as your own.
+>
+> Kind regards
+>
+> Aril Schultzen
+>
+	\end{Verbatim}
+
 
 \end{appendices}
