--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -229,12 +229,10 @@
 
 @misc{MATT_DAVIS,
   title="Functions for converting dates to/from JD and MJD",
+  author = "Matt Davis",
   url={https://gist.github.com/jiffyclub/1294443},
   note = {Accessed: 02-09-2016}
 }
-
-
-
 
 % Comments:
 % Both C_RATIONAL and GNU_SOCKETS are obviously credited wrong.
