Added text about the civil gps spoofer

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -27,7 +27,7 @@ The equation is simple to solve, first we need the rate. In this context, the \t
 What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They don't stay accurate forever. This phenomena known as \textit{frequency drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. This property is a result of how they track time. In essence, all clocks work in the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is a quartz crystal powered by a battery. The frequency of which the crystal oscillates is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. Although a completely different beast, the same principles apply to the atomic clock which uses the microwave radiation that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}.
 
 \section{GPS signals and Time}\label{GST}
-During the introduction of this thesis the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS, it is also used for timing. The GPS satellites transmits a \textit{Coarse/Acquisition (C/A)} code and a restricted \textit{Precision (P)} code. The C/A code is freely open for everyone and is transmitted at the L1 carrier frequency (1575.42 MHz) and the P code is transmitted at both L1 and L2 (1227.60 MHz) and is reserved for the military. The C/A code is a 1023 bit pseudo random code that is transmitted at 1.023 Mbit/s, which means it repeats itself every millisecond. Each satellite transmits a different pseudo random code, codes that does not correlate well with each other. This is important because it makes it possible to separate the satellites from each other. The way the receiver calculates its position was briefly mentioned during the introduction and is better explained here. The receiver calculates the distance from itself to the satellites by comparing the pseudo random code received from the satellite with an identical one it generates itself. The receiver "slides" these codes over each other further and further in an attempt to match them up. The signals travel time is determined by how far the codes had to be slided before the matched. This is what is called \textit{Code-phase GPS} and it has got some problems. Since the codes have a wide cycle width, almost a microsecond, there is still a significant uncertainty though the codes match. At the speed of light, a micrFTsecond wrong translates to a roughly 300 meter error in the solved position. What many receivers do is that they start with the code-phase and move on to using measurements based on the carrier frequency. Since the frequency is much higher, the uncertainty withing the match decreases thus increasing the accuracy dramatically. This is whats known as \textit{Carrier-phase GPS}.
+During the introduction of this thesis the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS, it is also used for timing. The GPS satellites transmits a \textit{Coarse/Acquisition (C/A)} code and a restricted \textit{Precision (P)} code. The C/A code is freely open for everyone and is transmitted at the L1 carrier frequency (1575.42 MHz) and the P code is transmitted at both L1 and L2 (1227.60 MHz) and is reserved for the military. The C/A code is a 1023 bit pseudo random code that is transmitted at 1.023 Mbit/s, which means it repeats itself every millisecond. Each satellite transmits a different pseudo random code, codes that does not correlate well with each other. This is important because it makes it possible to separate the satellites from each other. The way the receiver calculates its position was briefly mentioned during the introduction and is better explained here. The receiver calculates the distance from itself to the satellites by comparing the pseudo random code received from the satellite with an identical one it generates itself. The receiver "slides" these codes over each other further and further in an attempt to match them up. The signals travel time is determined by how far the codes had to be slided before the matched. This is what is called \textit{Code-phase GPS} and it has got some problems. Since the codes have a wide cycle width, almost a microsecond, there is still a significant uncertainty though the codes match. At the speed of light, a micrFTsecond wrong translates to a roughly 300 meter error in the solved position. What many receivers do is that they start with the code-phase and move on to using measurements based on the carrier frequency. Since the frequency is much higher, the uncertainty withing the match decreases thus increasing the accuracy dramatically. This is whats known as \textit{Carrier-phase GPS}. These signals can be seen as range signals, used to measure distance. This is however not the whole story. The GPS signals also include \textit{navigation message}\label{nav_message} like \textit{ephemeris} as well something called the \textit{almanac}. The ephemeris data orbital information that every GPS satellite in the constellation transmits. This is used by the receiver to calculate the satellites position. The almanac is a state report of the whole constellation. 
 
 Alright, but what about time? We have already established that the key to GPS is measuring the travel time of a radio signal, but considering the consequences of a couple of microseconds of slack when dealing with light-speed, it is really putting some pressure on a GPS receiver's internal clock. As previously mentioned, all your receiver needs to do to find its position in a three dimensional space, is three GPS satellites. If the GPS receivers internal clocks were perfect, the three satellite ranges would intersect at a single point, your position. But in the real world our clocks are everything but perfect. One could use atomic clocks in the receivers but that would make the receivers too expensive (even though chip scale atomic clocks (CSAC) are becoming increasingly affordable \ref{op}) for anyone to buy. The solution is to make a fourth measurement from a fourth satellite. This measurement will not intersect with the first three when using an imperfect clock. The receiver can then try to find a correction factor it can subtract from its timing measurement in order to make the measurements intersect. By doing this, it also brings the receivers clock back to sync with universal time. With the correct time, it can also make correct and precise positioning. \cite{TRIMBLETIME}
 
@@ -78,10 +78,10 @@ The PMU's GPS receivers are never moved and their position is always known. By u
 This countermeasure assumes two receivers with at least 1 km distance from each other that tracks a signal from a satellite visible to them both. It is also based on the assumption that the encrypted military P(Y) code cannot be forged by a spoofer. The receivers use the C/A code phase and timing relationship to the P(Y) code to obtain two samples from the same time frame of the received P(Y) code and then correlate the two samples. Even though the samples will be encrypted, noisy and perhaps distorted by narrow-band RF front-ends, a high correlation peak should be created when a cross-correlation is conducted as long as the receivers are not spoofed. A key conclusion of the research made by L. Heng (2013) as referenced by L. Heng \textit{et alia} (2014) was that the probability of detection errors using this method decreased exponentially with the length of the samples made from the P(Y) code and the number of receivers used as reference. This method has therefore proved itself effective against spoofing attacks, but ineffective against replay spoofing because the rebroadcast uses authentic GPS signals with correct P(Y) code. It is important to note that the implementation of this countermeasure relies on the GPS receiver's ability to output baseband samples and these samples ability to be transfered over a data network. Because the sampling rate of the samples are fairly high, it is recommended that the spoofing detection is done periodically instead of continuously. \cite{HengChouGao14}  
 
 \subsubsection{Position Aided (PIA) Tracking loops}\label{ptl} %[C3]
-\textit{Vector tracking} is a receiver architecture that combine the tasks of signal tracking and position/velocity estimation into one algorithm. This is a contrast to the traditional way where the tracking methods track satellites independently as well as the position/velocity solution independently. Even though this requires more computing power, it increases immunity to interference and jamming. The vector tracking is aided by the fact the we know the PMU GPS receivers true location. The tracking robustness can be further improved by using a Kalman filter. Since a PMU and its GPS receiver remain stationary, the parameters of the tracking loops can be chosen to narrow the loop filter bandwidth which reduces noise and the effective radius of a potential jamming attack (\ref{jam}). Replay spoofing attacks will also fail since the PIA vector tracking depends on the knowledge of the GPS receivers true position. In the event of such an attack, the result would be that the vector tracking will fail to function. \cite{HengChouGao14}  
+\textit{Vector tracking} is a receiver architecture that combine the tasks of signal tracking and position/velocity estimation into one algorithm. This is a contrast to the traditional way where the tracking methods track satellites independently as well as the position/velocity solution independently. Even though this requires more computing power, it increases immunity to interference and jamming. The vector tracking is aided by the fact the we know the PMU GPS receivers true location. The tracking robustness can be further improved by using a Kalman filter. Since a PMU and its GPS receiver remain stationary, the parameters of the tracking loops can be chosen to narrow the loop filter bandwidth which reduces noise and the effective radius of a potential jamming attack. Replay spoofing attacks will also fail since the PIA vector tracking depends on the knowledge of the GPS receivers true position. In the event of such an attack, the result would be that the vector tracking will fail to function. \cite{HengChouGao14}  
 
 \subsubsection{Multi-receiver tracking loops}\label{mrtl}
-Building on the idea from \textit{PIA Tracking loops}(\ref{ptl}) one can benefit from the networked nature of the GPS-timed PMU. In a multi-receiver vector tracking loop, many receivers process information in collaboration. A key conclusion of the research made by A. Soloviev \textit{et alia} as referenced by L. Heng \textit{et alia} (2014) showed that acquisition and tracking performance under low signal-to-noise ratio conditions was improved under multi-receiver signal accumulation. Multi-receiver phased arrays also improved the robustness against both jamming (\ref{jam}) and spoofing attacks (\ref{sls},\ref{dls}) by \textit{"Forming beams to satellites and steering nulls in the direction of attacking transmitters"} (L. Heng \textit{et alia} (2014), p.41). In addition to the increased robustness, it increases the ability to detect malfunction (\ref{mf}). A faulty receiver will usually not be consistent with other correctly functioning receivers. As with the countermeasure based on cross-correlating P(Y) code (\ref{ccpc}), this implementation also requires that the GPS receivers are able to output baseband samples. In this implementation, the samples need to be transmitted continuously among the receivers which requires a capable data network such as a typical LAN. \cite{HengChouGao14} 
+Building on the idea from \textit{PIA Tracking loops} one can benefit from the networked nature of the GPS-timed PMU. In a multi-receiver vector tracking loop, many receivers process information in collaboration. A key conclusion of the research made by A. Soloviev \textit{et alia} as referenced by L. Heng \textit{et alia} (2014) showed that acquisition and tracking performance under low signal-to-noise ratio conditions was improved under multi-receiver signal accumulation. Multi-receiver phased arrays also improved the robustness against both jamming (\ref{jam}) and spoofing attacks (\ref{sls},\ref{dls}) by \textit{"Forming beams to satellites and steering nulls in the direction of attacking transmitters"} (L. Heng \textit{et alia} (2014), p.41). In addition to the increased robustness, it increases the ability to detect malfunction. A faulty receiver will usually not be consistent with other correctly functioning receivers. As with the countermeasure based on cross-correlating P(Y) code, this implementation also requires that the GPS receivers are able to output baseband samples. In this implementation, the samples need to be transmitted continuously among the receivers which requires a capable data network such as a typical LAN. \cite{HengChouGao14} 
 
 \newpage
 \subsection{Summary}
@@ -121,3 +121,6 @@ The table (\ref{tab:threatcounttable}) shows the different threat models and the
     \cellcolor{auxiliryc}Y & Effective & \cellcolor{ineffectivec}N & Ineffective & \cellcolor{effectivec}X & Auxiliary \\ \hline
     \end{tabular}
   \end{table} 
+
+\section{The civil GPS spoofer}
+In 2012 a team from The University of Texas at Austin published a paper describing \textit{The Civil GPS Spoofer}. It was a GPS spoofer and the first of its kind. The Cilvil GPS spoofer was able to precisely align both the C/A codes and navigation data in a counterfeit signal, with those of an authentic GPS signal. The alignment capability allowed for sophisticated spoofing attacks that was hard to detect. The spoofer was implemented in software-defined radio with a digital signal processor. The user could control the fake GPS signal, specifying both navigation and timing. By tracking an acquiring GPS signals and calculating navigation data, it could produce up to 14 spoofed L1 C/A signals by performing real-time prediction of the pseudo random C/A codes. The team tested the spoofer against a wide variety of applications using the civilian receivers, and they were always successful \cite{EVPMUGA}. When designing spoof proof GPS systems, the Civil GPS spoofer can be considered a benchmark reference threat.  
